--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -91,6 +91,7 @@ frameBufferEmulation\copyToRDRAM=1
 [POKEMON%20STADIUM%202]
 Good_Name=Pokemon Stadium 2 (E)(F)(G)(I)(J)(S)(U)
 frameBufferEmulation\copyToRDRAM=0
+frameBufferEmulation\copyDepthToRDRAM=0
 
 [POKEMON%20STADIUM%20G&S]
 Good_Name=Pokemon Stadium Kin Gin (J)
