copyDepthToRDRAM=0 for Pokemon Stadium Kin Gin

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -96,6 +96,7 @@ frameBufferEmulation\copyDepthToRDRAM=0
 [POKEMON%20STADIUM%20G&S]
 Good_Name=Pokemon Stadium Kin Gin (J)
 frameBufferEmulation\copyToRDRAM=0
+frameBufferEmulation\copyDepthToRDRAM=0
 
 [RUSH%202049]
 Good_Name=San Francisco Rush 2049 (E)(U)
